# gtfs-django

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  make_migrations.sh  manage.py  publish.sh  pyproject.toml  schedule_tests.py
docs/: zensical.toml
eta_prediction/: .dockerignore  .env.example  CHANGELOG.md  Dockerfile  Makefile  PREFECT.md  README.md  docker-compose.full.yml  docker-compose.prefect.yml  docker-compose.yml  gtfs_rt_bindings_SA.py  gtfs_rt_bindings_TU.py  gtfs_rt_bindings_VP.py  pyproject.toml
eta_prediction/bytewax/: README.md  mock_stops_and_shapes.py  mqtt2redis.py  pred2redis.py  pyproject.toml  test_redis_predictions.py
eta_prediction/bytewax/profiling/: inference_times.csv  pipeline_times.csv  redis_publish_times.csv  redis_read_times.csv
eta_prediction/bytewax/subscriber/: mqtt2redis.py  pyproject.toml
eta_prediction/bytewax_tests/: README.md  bytewax_redis_flow.py  mock_route_stops.py  periodic_input.py  pred2redis.py  redis2redis_flow2.py  sample_dataflow.py
eta_prediction/bytewax_tests/gtfs-flow/: gtfs_flow.py  gtfs_rt_source.py
eta_prediction/bytewax_tests/models/trained/: ewma_GreeD_GreenE_dataset_route-temporal_20251027_161343_alpha=0_3.pkl  ewma_GreeD_GreenE_dataset_route-temporal_20251027_161343_alpha=0_3_meta.json  ewma_GreeD_GreenE_dataset_route-temporal_20251027_161350_alpha=0_3_meta.json  ewma_Green-E_dataset_route-temporal_20251027_153126_alpha=0_3.pkl  historical_mean_Green-E_dataset_route-temporal_20251027_153123_meta.json  polyreg_distance_GreeD_GreenE_dataset_distance_20251027_161336_degree=2_route_specific=no.pkl  polyreg_distance_GreeD_GreenE_dataset_distance_20251027_161336_degree=2_route_specific=no_meta.json  polyreg_distance_GreeD_GreenE_dataset_distance_20251027_161343_degree=2_route_specific=yes_meta.json  polyreg_distance_GreeD_GreenE_dataset_distance_20251027_161343_degree=3_route_specific=no_meta.json  (+2 more)
eta_prediction/core/: README.md  __init__.py  config.py  exceptions.py  logging.py  validation.py
eta_prediction/core/tests/: test_core.py
eta_prediction/datasets/: sample.parquet
eta_prediction/docker/: Dockerfile.bytewax  Dockerfile.django  Dockerfile.eta  Dockerfile.mqtt-subscriber
eta_prediction/docs/: PIPELINE_GUIDE.md
eta_prediction/eta_service/: README.md  __init__.py  estimator.py  test_estimator.py
eta_prediction/feature_engineering/: README.md  dataset_builder.py  operational.py  pyproject.toml  spatial.py  temporal.py  weather.py
eta_prediction/feature_engineering/tests/: test_operational.py  test_spatial.py  test_temporal.py  test_weather.py
eta_prediction/gtfs-rt-pipeline/: .env.example  Dockerfile  README.md  diagnostics.py  docker-compose.yml  eta_vp_sample.parquet  manage.py  pyproject.toml
eta_prediction/gtfs-rt-pipeline/analytics/: README.md  run_exports.sh
eta_prediction/gtfs-rt-pipeline/ingestproj/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
eta_prediction/gtfs-rt-pipeline/rt_pipeline/: admin.py  apps.py  models.py  tasks.py
eta_prediction/gtfs-rt-pipeline/sch_pipeline/: admin.py  models.py  tasks.py  utils.py
eta_prediction/models/: README.md  __init__.py  check_registry.py  train_all_models.py
eta_prediction/models/common/: __init__.py  data.py  keys.py  metrics.py  registry.py  utils.py
eta_prediction/models/evaluation/: leaderboard.py  roll_validate.py
eta_prediction/models/ewma/: predict.py  train.py
eta_prediction/models/historical_mean/: predict.py  train.py
eta_prediction/models/polyreg_distance/: predict.py  train.py
eta_prediction/models/polyreg_time/: predict.py  train.py
eta_prediction/models/trained/: ewma_GreeD_GreenE_dataset_route-temporal_20251027_161350_alpha=0_3.pkl  ewma_Green-E_dataset_route-temporal_20251027_153126_alpha=0_3_meta.json  ewma_Green-E_dataset_route-temporal_20251027_153130_alpha=0_3.pkl  ewma_Green-E_dataset_route-temporal_20251027_153130_alpha=0_3_meta.json  historical_mean_GreeD_GreenE_dataset_route-temporal_20251027_161336.pkl  historical_mean_GreeD_GreenE_dataset_route-temporal_20251027_161336_meta.json  historical_mean_Green-E_dataset_route-temporal_20251027_153123.pkl  polyreg_distance_GreeD_GreenE_dataset_distance_20251027_161343_degree=2_route_specific=yes.pkl  polyreg_distance_GreeD_GreenE_dataset_distance_20251027_161343_degree=3_route_specific=no.pkl  polyreg_distance_Green-E_dataset_distance_20251027_153123_degree=2_route_specific=no.pkl  polyreg_distance_Green-E_dataset_distance_20251027_153123_degree=2_route_specific=no_meta.json  polyreg_distance_Green-E_dataset_distance_20251027_153126_degree=2_route_specific=yes.pkl  polyreg_distance_Green-E_dataset_distance_20251027_153126_degree=2_route_specific=yes_meta.json  polyreg_distance_Green-E_dataset_distance_20251027_153126_degree=3_route_specific=no.pkl  polyreg_distance_Green-E_dataset_distance_20251027_153126_degree=3_route_specific=no_meta.json  polyreg_time_GreeD_GreenE_dataset_operational-temporal_20251027_161336_degree=2_handle_nan=drop_meta.json  polyreg_time_GreeD_GreenE_dataset_operational-temporal_20251027_161343_degree=2_handle_nan=drop.pkl  polyreg_time_GreeD_GreenE_dataset_operational-temporal_20251027_161343_degree=2_handle_nan=drop_meta.json  polyreg_time_Green-E_dataset_operational-temporal_20251027_153123_degree=2_handle_nan=drop.pkl  polyreg_time_Green-E_dataset_operational-temporal_20251027_153123_degree=2_handle_nan=drop_meta.json  polyreg_time_Green-E_dataset_operational-temporal_20251027_153127_degree=2_handle_nan=drop_meta.json  registry.json
eta_prediction/models/xgb/: predict.py  train.py
eta_prediction/prefect/: Dockerfile  README.md  mock_stops_and_shapes.py  prefect.yaml  prefect_eta_flow.py  pyproject.toml  runtime_config.py  runtime_deployment.py  setup_prefect.py
eta_prediction/prefect/flows/: __init__.py  dataset_flow.py  evaluation_flow.py  promotion_flow.py  registry_flow.py  training_flow.py
eta_prediction/prefect/profiling/: eta_inference_times.csv  pipeline_latency_times.csv  redis_fetch_times.csv  redis_write_times.csv
eta_prediction/scripts/: seed_test_data.py
gtfs/: __init__.py  (+8 more)
(+105 files in other folders)
