[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gtfs-django"
version = "0.2.0"
description = "A Django app for processing and managing GTFS (General Transit Feed Specification) data"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
keywords = ["django", "gtfs", "transit", "schedule", "realtime"]
dependencies = [
    "django>=5.2.0",
    "gtfs-realtime-bindings>=2.0.0",
    "requests>=2.33.1",
]

[project.urls]
Homepage = "https://github.com/simovilab/gtfs-django"
Repository = "https://github.com/simovilab/gtfs-django.git"
Issues = "https://github.com/simovilab/gtfs-django/issues"

[tool.hatch.build]
include = ["gtfs/", "README.md", "LICENSE"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["tests.py", "test_*.py", "*_test.py"]
addopts = "-q"

[dependency-groups]
dev = [
    "django-stubs>=5.2.5",
    "mypy>=1.18.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.11.1",
    "ruff>=0.13.0",
]
docs = [
    "mkdocstrings-python>=2.0.3",
    "zensical>=0.0.33",
]
testing = ["coverage[toml]>=7.10.6", "tox>=4.30.2"]
