[project]
name = "gtfsrt-tools"
version = "0.1.0"
description = "Utilities for exploring GTFS-Realtime feeds (Vehicle Positions, Trip Updates, Alerts)."
authors = [
    { name = "Jæ" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "celery>=5.5.3",
    "django>=4.2.25",
    "gtfs-realtime-bindings>=1.0.0",
    "matplotlib>=3.9.4",
    "pandas>=2.3.3",
    "psycopg>=3.2.11",
    "pytest>=8.4.2",
    "requests>=2.31",
]

[tool.uv.workspace]
members = [
    "feature_engineering/proj",
    "feature_engineering",
]
