[project]
name = "feature_engineering"
version = "0.1.0"
description = "Feature engineering utilities for GTFS realtime and schedule data (part of gtfs-django repository)"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "maintainer", email = "maintainer@example.com" }
]
license = { text = "MIT" }

dependencies = [
  "numpy>=1.26,<2",
  "pandas>=2.2,<3",
  "scikit-learn>=1.3,<2",
  "scipy>=1.11,<2",
  "joblib>=1.3,<2",
  "tqdm>=4.66,<5",
  "pyproj>=3.6,<4",
  "shapely>=2.1,<3",
  "geopandas>=0.14,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4,<8",
  "black>=24.3,<25",
  "isort>=5.13,<6",
  "mypy>=1.11,<2",
  "pre-commit>=3.4,<4",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"